--- a/view/admin/passwd.html
+++ b/view/admin/passwd.html
@@ -15,7 +15,7 @@
 		<div class="col-md-4 column">
 		        <h4 class="modal-title" id="myModalLabel">修改密码</h4>
 		      <div class="modal-body" >
-		      	<form role="form" id="content-form" action="?c=admin&a=save_content" method="post" >
+		      	<form role="form" id="content-form" action="?c=admin&a=save_passwd" method="post" >
 				  <div class="form-group">
 				    <label for="passwd">新 密 码</label>
 				    <input type="password" class="form-control" id="passwd" name="passwd" placeholder="输入新密码" />
